--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -6,4 +6,141 @@
     android:layout_height="match_parent"
     tools:context=".AboutMeActivity">
 
+    <TextView
+        android:id="@+id/first"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="1. First Name" />
+
+    <TextView
+        android:id="@+id/firstDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/first"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
+
+    <TextView
+        android:id="@+id/last"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/firstDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="2. Last Name" />
+
+    <TextView
+        android:id="@+id/lastDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/last"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lastDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="3. Email Address" />
+
+    <TextView
+        android:id="@+id/emailDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/emailDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="4. Phone Number" />
+
+    <TextView
+        android:id="@+id/phoneDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phone"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phoneDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="5. Age" />
+
+    <TextView
+        android:id="@+id/ageDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/age"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/university"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ageDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="6. University" />
+
+    <TextView
+        android:id="@+id/universityDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/university"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:id="@+id/domain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/universityDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="7. Study Domain" />
+
+    <TextView
+        android:id="@+id/domainDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/domain"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp" />
+
+    <TextView
+        android:id="@+id/experience"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/domainDB"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:text="8. Experience in the field" />
+
+    <TextView
+        android:id="@+id/experienceDB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/experience"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
