--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/first"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -18,15 +18,15 @@
     <TextView
         android:id="@+id/firstDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/first"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/last"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/firstDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -35,7 +35,7 @@
     <TextView
         android:id="@+id/lastDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/last"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
@@ -43,7 +43,7 @@
     <TextView
         android:id="@+id/email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/lastDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -52,7 +52,7 @@
     <TextView
         android:id="@+id/emailDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/email"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
@@ -60,7 +60,7 @@
     <TextView
         android:id="@+id/phone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/emailDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -69,7 +69,7 @@
     <TextView
         android:id="@+id/phoneDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/phone"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
@@ -77,7 +77,7 @@
     <TextView
         android:id="@+id/age"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/phoneDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -86,7 +86,7 @@
     <TextView
         android:id="@+id/ageDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/age"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
@@ -94,7 +94,7 @@
     <TextView
         android:id="@+id/university"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/ageDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -103,7 +103,7 @@
     <TextView
         android:id="@+id/universityDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/university"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
@@ -111,7 +111,7 @@
     <TextView
         android:id="@+id/domain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/universityDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -120,7 +120,7 @@
     <TextView
         android:id="@+id/domainDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/domain"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -130,7 +130,7 @@
     <TextView
         android:id="@+id/experience"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/domainDB"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
@@ -139,7 +139,7 @@
     <TextView
         android:id="@+id/experienceDB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
         android:layout_below="@+id/experience"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true" />
